--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*table.quizz{
+            */
+            
+
+
 body {
     background-image:linear-gradient(100deg, #2C8791, #AF7CD1 );
     height : 100%;
